[package]
name = "persistent-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tokio = { version = "1.14.0", features = ["full"] }
tokio-io = {version ="0.1.13"}
futures = "0.1"
bytes = "1"
# logging lib(required)
log = "0.4"
atoi = "0.3.2"
fern = "0.6"
tokio-util = { version = "0.6.9", features = ["full"] }
chrono = "0.4"
lazy_static = "1.4.0"
rocksdb="0.18"